Fixing tech-stack route name and CLEANING UP py files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
             <div class="nav-menu-links">
                 <a href="/">Home</a>
                 <a href="/about-me">About Me</a>
-                <a href="/tech-in-action">Tech Stack</a>
+                <a href="/tech-stack">Tech Stack</a>
                 <a href="/my-projects">My Projects</a>
                 <a href="/education">Education</a>
                 <a href="/contact">Contact</a>
