--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,7 +6,7 @@
 <div class="page-content">
     <h1>About Me</h1>
 
-    <div style="border: 1px solid #ddd; padding: 20px; border-radius: 8px; margin-bottom: 2em;">
+    <div class="about-me-intro">
         <p><em>
             A DevOps engineer specializing in accelerating software delivery through robust and secure CI/CD pipelines.<br>
             My core expertise lies in architecting and managing scalable, secure, and cost-optimized infrastructure on AWS and with Kubernetes managed with Terraform.
@@ -18,7 +18,7 @@
     </div>
     
     <div class="about-me-container">
-        <aside class="about-me-menu" style="margin-top: 80px;">
+        <aside class="about-me-menu">
             <ul>
                 <li><a href="#overture">The Overture</a></li>
                 <li><a href="#transition">The Transition</a></li>
