--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Lior Milliger - Portfolio{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='files/icon-original.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -32,7 +32,7 @@
                 <a href="/contact">Contact</a>
             </div>
             <div class="nav-icon-links">
-                <a href="{{ url_for('static', filename='files/LiorMilligerCV.pdf') }}" download class="nav-button">CV</a>
+                <a href="{{ url_for('static', filename='files/LiorMilligerCV.pdf') }}" target="_blank" rel="noopener noreferrer" class="nav-button">CV</a>
                 <a href="https://github.com/liormilliger" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
